<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvBottle"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="Glass"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgBtnBottle"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnBottle" />

    <TextView
        android:id="@+id/txvKitchen"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:text="Compost"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgBtnKitchen"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnKitchen" />

    <TextView
        android:id="@+id/txvGeneral"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:text="General"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgBtnGeneral"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnGeneral" />

    <ImageView
        android:id="@+id/imv1"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlb1"
        app:srcCompat="@drawable/title" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlb1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnRecycle"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_recycle_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnGeneral"
        app:layout_constraintTop_toBottomOf="@+id/imv1"
        app:srcCompat="@drawable/recycle" />

    <ImageButton
        android:id="@+id/imgBtnGeneral"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_general_button"
        app:layout_constraintStart_toEndOf="@+id/imgBtnRecycle"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnKitchen"
        app:layout_constraintTop_toBottomOf="@+id/imv1"
        app:srcCompat="@drawable/general" />

    <ImageButton
        android:id="@+id/imgBtnKitchen"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_kitchen_button"
        app:layout_constraintStart_toEndOf="@+id/imgBtnGeneral"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnBottle"
        app:layout_constraintTop_toBottomOf="@+id/imv1"
        app:srcCompat="@drawable/kitchen" />

    <ImageButton
        android:id="@+id/imgBtnBottle"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_bottle_button"
        app:layout_constraintStart_toEndOf="@+id/imgBtnKitchen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv1"
        app:srcCompat="@drawable/bottle" />

    <TextView
        android:id="@+id/txvRecycle"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:text="Recycle"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgBtnRecycle"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnRecycle" />

    <android.widget.Button
        android:id="@+id/btnKnowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/gradient_green"
        android:text="Garbage News/Information"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="31sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPosition" />

    <android.widget.Button
        android:id="@+id/btnQuary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/gradient_blue"
        android:text="Waste type"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="31sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvKitchen" />

    <android.widget.Button
        android:id="@+id/btnPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/gradient_yellow"
        android:text="Collection Points"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="31sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnQuary" />

    <ImageButton
        android:id="@+id/imgBtnAccount"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/desc_account_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account" />

    <TextView
        android:id="@+id/txvReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="Return"
        android:textColor="#FAF7F7"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
